[package]
name = "bevy_replicon_snap"
version = "0.2.6"
edition = "2021"
authors = ["Ben Dzaebel <ben@bendz.dev>"]
license = "MIT"
repository = "https://github.com/Bendzae/bevy_replicon_snap"
categories = ["game-development", "network-programming"]
keywords = ["networking", "bevy", "snapshot", "interpolation", "prediction"]
description = "High-level networking crate that extends the bevy_replicon crate to allow snapshot interpolation and client-side prediction"

[dependencies]
bevy = { version = "0.16.0", default_features = false, features = [
    "std",
    "async_executor",
] }
bevy_replicon = "0.33"
serde = "1.0"
postcard = "1.1.1"
bevy_replicon_snap_macros = { version = "0.2.0", path = "macros" }

[dev-dependencies]
clap = { version = "4.1", features = ["derive"] }
bevy = { version = "0.16", default-features = true }

[package.metadata.commands]
example_interpolation = "cargo run --example interpolated -- server & cargo run --example interpolated -- client && fg"
example_interpolation_add_client = "cargo run --example interpolated -- client && fg"
example_prediction = "cargo run --example owner_predicted -- server & cargo run --example owner_predicted -- client && fg"
example_prediction_add_client = "cargo run --example owner_predicted -- client && fg"
